--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
                                             <p>View and shop my art on <a href = "https://www.etsy.com/shop/kmbpaintedglass/?etsrc=sdt" target = "_blank">Etsy!</a></p>
                                             <p>Follow my latest work and witness my artistic process on <a href = "https://www.instagram.com/kmbpaintedglass/" target = "_blank">Instagram</a>.</p>
                                         </div>
-                                        <img id = "Art" class="img-fluid" src="assets/kadee_painting.JPG" alt="Photo of KaDee painting" />
+                                        <img id = "Art" class="img-fluid" src="assets/kadee_painting.jpg" alt="Photo of KaDee painting" />
                                     </div>
                                 </div>
                             </div>
