--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content />
-        <meta name="author" content />
+        <meta name="description" content = "This pages contains links to ways to contact me." />
+        <meta name="author" content = "KaDee Bramlett" />
         <title>KaDee Bramlett - Contact</title>
         <!-- Favicon-->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
