--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
         <meta name="description" content="This is a portfolio of my professional background & creative endeavors" />
         <meta name="author" content="KaDee Bramlett" />
         <title>KaDee Bramlett - Portfolio</title>
+        <!-- Primary Meta Tags -->
+        <title>KaDee Bramlett - Portfolio</title>
+        <meta name="title" content="KaDee Bramlett - Portfolio" />
+        <meta name="description" content="This is a portfolio of my professional background & creative endeavors" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://metatags.io/" />
+        <meta property="og:title" content="KaDee Bramlett - Portfolio" />
+        <meta property="og:description" content="This is a portfolio of my professional background & creative endeavors" />
+        <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://metatags.io/" />
+        <meta property="twitter:title" content="KaDee Bramlett - Portfolio" />
+        <meta property="twitter:description" content="This is a portfolio of my professional background & creative endeavors" />
+        <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+        <!-- Meta Tags Generated with https://metatags.io -->
         <!-- Favicon-->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
