--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <meta property="og:url" content="https://metatags.io/" />
         <meta property="og:title" content="KaDee Bramlett - Portfolio" />
         <meta property="og:description" content="This is a portfolio of my professional background & creative endeavors" />
-        <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+        <meta property="og:image" content="assets/assets/kadee_at_computer.JPEG" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://metatags.io/" />
         <meta property="twitter:title" content="KaDee Bramlett - Portfolio" />
         <meta property="twitter:description" content="This is a portfolio of my professional background & creative endeavors" />
-        <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+        <meta property="twitter:image" content="assets/kadee_at_computer.JPEG" />
 
         <!-- Meta Tags Generated with https://metatags.io -->
         <!-- Favicon-->
