--- a/resume.html
+++ b/resume.html
@@ -56,6 +56,7 @@
                                         <div class="d-flex align-items-center mb-4">
                                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-table"></i></div>
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Table of Contents</span></h3>
+                                            
                                         </div>
                                         <!--Contents Button Group-->
                                         <div class="d-grid gap-2">
@@ -82,6 +83,12 @@
                                                   <li><a class="dropdown-item" href="#Skills">Transferable Skills</a></li>
                                                   <li><a class="dropdown-item" href="#Traits">Personality Traits</a></li>
                                                 </ul>
+                                                <!-- Download resume button-->
+                                                <!-- Note: Set the link href target to a PDF file within your project-->
+                                                    <a class="btn btn-outline-primary px-4" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf">
+                                                    <div class="d-inline-block bi bi-download me-2"></div>
+                                                        Download Resume
+                                                    </a>
                                          </div>
                                     </div>
                                 </div>
@@ -555,10 +562,10 @@
                         </section>
                         <!-- Download resume button-->
                         <!-- Note: Set the link href target to a PDF file within your project-->
-                            <!-- <a class="btn btn-primary px-4 py-3" href="#!">
+                            <a class="btn btn-primary px-4 py-3" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf">
                                 <div class="d-inline-block bi bi-download me-2"></div>
                                 Download Resume
-                             </a> -->
+                             </a>
                     </div>
                 </div>
             </div>
