--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
                                                 </ul>
                                                 <!-- Download resume button-->
                                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                                    <a class="btn btn-outline-primary px-4" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf">
+                                                    <a class="btn btn-outline-primary px-4" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf" target = "_blank">
                                                     <div class="d-inline-block bi bi-download me-2"></div>
                                                         Download Resume
                                                     </a>
@@ -562,7 +562,7 @@
                         </section>
                         <!-- Download resume button-->
                         <!-- Note: Set the link href target to a PDF file within your project-->
-                            <a class="btn btn-primary px-4 py-3" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf">
+                            <a class="btn btn-primary px-4 py-3" href="assets/Resume-from-KaDee-Bramlett-Portfolio-Website.pdf" target = "_blank">
                                 <div class="d-inline-block bi bi-download me-2"></div>
                                 Download Resume
                              </a>
