added Reviews page
added a page of Reviews of my work and update the nav on all other pages to reflect the page addition

--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="reviews.html">Reviews</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -235,7 +236,7 @@
                                         <div class="col-lg-8"><div><p>In 2022 I had the opportunity to take on a few short-term copywriting gigs.</p>
                                             <ul>
                                         <li><p>I wrote web copy for clients of a marketing firm. The project coordinator interviewed the clients to get information about their business, including their mission and target market. Then I would watch recordings of the interviews and craft copy for the client's commerical website. <em>Web copy samples available upon request.</em></p></li>
-                                        <li><p>I wrote track descriptions of commercial music for a music producer who lists his work with Amphibious Zoo, a commercial soundtrack company. Read my track descriptions for <a href = "https://www.amphibiouszoo.com/music/album/az104-against-the-clock/" target = "_blank">Against the Clock</a>, <a href = "https://www.amphibiouszoo.com/music/album/az106-last-one-standing/" target = "_blank">Last One Standing</a>, and <a href = "https://www.amphibiouszoo.com/music/album/az108-swagger-trap-volume-2/" target = "_blank">Swagger Trap - Volume 2</a></p></li>
+                                        <li><p>I wrote track descriptions of commercial music for Or Kribos, a composer and music producer who lists his work with Amphibious Zoo, a commercial soundtrack company. Read my track descriptions for <a href = "https://www.amphibiouszoo.com/music/album/az104-against-the-clock/" target = "_blank">Against the Clock</a>, <a href = "https://www.amphibiouszoo.com/music/album/az106-last-one-standing/" target = "_blank">Last One Standing</a>, and <a href = "https://www.amphibiouszoo.com/music/album/az108-swagger-trap-volume-2/" target = "_blank">Swagger Trap - Volume 2</a></p></li>
                                         <li><p>I wrote a few blog articles for a client covering a range of topics, including reasons to shop local, features of OKC life, and  benefits of using a coworking space. <em>Samples available upon request.</em></p></li>
                                         </div></div>
                                     </div>
