--- a/resume.html
+++ b/resume.html
@@ -535,6 +535,11 @@
                                             <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Leadership</div></div>
                                             <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Customer Service</div></div>
                                         </div>
+                                        <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Critical Thinking</div></div>
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Active Listening</div></div>
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Typing Skills</div></div>
+                                        </div>
                                     </div>
                                     <!-- Personality Traits list-->
                                     <div class="mb-0">
@@ -556,6 +561,11 @@
                                             <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Collaborative</div></div>
                                             <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Flexible</div></div>
                                             <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Professional</div></div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Attention to Detail</div></div>
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Action Oriented</div></div>
+                                            <div class="col mb-1"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Diligent</div></div>
                                         </div>
                                     </div>
                                 </div>
