--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                                     <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                     <h4 class="text-uppercase m-0">LinkedIn</h4>
                                     <hr class="my-4 mx-auto" />
-                                    <div class="text-black-50"><a href="www.linkedin.com/in/kadee-bramlett" alt="link to LinkedIn">@kadee-bramlett</a></div>
+                                    <div class="text-black-50"><a href="https://www.linkedin.com/in/kadee-bramlett/" alt="link to LinkedIn">@kadee-bramlett</a></div>
                                 </div>
                             </div>
                         </div>
