--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
             <!--Back to Top Button-->
             <button onclick="topFunction()" id="backToTopButton" class = "btn-outline-dark" title="Go to top">Back to Top</button>
             <!-- Page Content-->
-            <div class="container px-5 my-5">
+            <div class="container my-5">
                 <div class="text-center mb-5">
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume</span></h1>
                 </div>
