--- a/reviews.html
+++ b/reviews.html
@@ -61,7 +61,7 @@
             <!--Back to Top Button-->
             <button onclick="topFunction()" id="backToTopButton" class = "btn-outline-dark" title="Go to top">Back to Top</button>
             <!-- Page Content-->
-            <div class="container px-5 my-5">
+            <div class="container my-5">
                 <div class="text-center mb-5">
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Reviews</span></h1>
                     <h3>Here's what people say about my work</h3>
