--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is KaDee Bramlett (they/she), and I do many things.</p>
-                                <p class="text-muted">I'm happiest when I'm learning, creating, and doing work that makes the world a better place. I paint, make video content, write, and do web development. My first career was in classical music, and you'll see evidence of that work on my resume and in my projects. Explore my website to learn more about me!</p>
+                                <p class="text-muted">I'm happiest when I'm learning, creating, and doing work that makes the world a better place! I paint, make video content, write, and do web development. My first career was in classical music, and you'll see evidence of that work on my resume and in my projects. Explore my website to learn more about me!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="mailto:kadee.bramlett@hotmail.com"><i class="bi bi-envelope"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/kadee-bramlett/" target = "_blank"><i class="bi bi-linkedin"></i></a>
