Added Mastodon links
I added my Mastodon link to the homepage and contact page

--- a/contact.html
+++ b/contact.html
@@ -100,9 +100,9 @@
                             <div class="card py-4 h-100">
                                 <div class="card-body text-center flex-wrap">
                                     <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                    <h4 class="text-uppercase m-0">Instagram</h4>
+                                    <h4 class="text-uppercase m-0">Mastodon</h4>
                                     <hr class="my-4 mx-auto" />
-                                    <div class="text-black-50"><a href="https://www.instagram.com/kmbramlett/" alt="link to Instagram">@kmbramlett</a></div>
+                                    <div class="text-black-50"><a href="https://mastodon.social/@kadee" alt="link to Instagram">@kadee</a></div>
                                 </div>
                             </div>
                         </div>
