--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                                 <p class="text-muted">I'm happiest when I'm learning, creating, and doing work that makes the world a better place! I paint, make video content, write, and do web development. My first career was in classical music, and you'll see evidence of that work on my resume and in my projects. Explore my website to learn more about me!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="mailto:kadee.bramlett@hotmail.com"><i class="bi bi-envelope"></i></a>
+                                    <a class="text-gradient" href="https://mastodon.social/@kadee"><i class="bi bi-mastodon"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/kadee-bramlett/" target = "_blank"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="https://instagram.com/kmbramlett" target = "_blank"><i class="bi bi-instagram"></i></a>
                                 </div>
