fixed a small typo

--- a/reviews.html
+++ b/reviews.html
@@ -119,7 +119,7 @@
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Dr. Tess Remy-Schumacher</div>
                                                 <div class="small fw-bolder">Professor for Cello </div>
-                                                <div class="small text-muted">at University of Central Oklahoma and</div>
+                                                <div class="small text-muted">at University of Central Oklahoma</div>
                                                 <div class="small text-muted">and</div>
                                                 <div class=" small fw-bolder">Member</div>
                                                 <div class="small text-muted">of the <a href="https://www.recordingacademy.com/" target="_blank"> Recording Academy</a></div>
