--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
                     <!-- Experience - Tech Section-->
                     <section>
                         <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
-                            <h2 id="Tech" class="text-primary fw-bolder mb-0">Experience - Tech Training</h2>
+                            <h2 id="Tech" class="text-primary fw-bolder mb-0">Experience</h2>
                         </div>
                         <!-- Experience Card 1-->
                         <div class="card shadow border-0 rounded-4 mb-5">
