--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; KaDee Bramlett 2024</div></div>
+                    <div class="col-auto"><div class="small m-0">&copy; <span id="currentYear"></span> KaDee Bramlett</div></div>
                     <!-- <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
