fixed broken id anchor and a link

--- a/projects.html
+++ b/projects.html
@@ -122,10 +122,10 @@
                                             <h4><a href="https://curatedwisdom.com/portfolio-page/VitaSpree%20Product%20Landing%20Page/" target = "_blank">VitaSpree</a> - a unique food tracking app</h4>
                                             <p><a href = "https://curatedwisdom.com/portfolio-page/VitaSpree/profile_home.html" target = "_blank">This is an early web version of VitaSpree</a>, an app I’m creating that encourages people to be healthier by eating more brightly-colored fruits and vegetables. I practiced incorporating some JavaScript on my own for the first time on this website. There’s no backend on it right now, and the finished product will likely look very different when I finish it someday.</p>
                                             <p>Here's <a href = "https://curatedwisdom.com/portfolio-page/VitaSpree%20Product%20Landing%20Page/" target="_blank">a product landing page</a> for the mobile version of my VitaSpree app. I used a Bootstrap template for this page. I also wrote all the copy and took some of the food photographs myself.</p>
-                                            <h4><a href = "https://curatedwisdom.com/portfolio-page/VitaSpree/profile_home.html" target = "_blank">Curated Wisdom</a> - a lifestyle website</h4>
+                                            <h4><a href = "https://curatedwisdom.com/" target = "_blank">Curated Wisdom</a> - a lifestyle website</h4>
                                             <p>The first "big" web project I built after completing the web dev certification was <a href = "https://curatedwisdom.com/" target = "_blank">Curated Wisdom</a>, a lifestyle website. This project was built with HTML and CSS, and it gave me a chance to practice my new skills while creating web content that was interesting to me. It's a dormant project right now, but I'm still very proud of the work I did on it.</p>
                                             
-                                            <h3><em>Certification Projects</em></h3>
+                                            <h3 id = "CertProjects"><em>Certification Projects</em></h3>
                                             <hr>
                                             <h4>freeCodeCamp</h4>
                                             <p>During the most intense isolation phase of the COVID pandemic I earned the <a href = "https://www.freecodecamp.org/certification/kmbramlett/responsive-web-design" target = "_blank">Responsive Web Development Certification</a> on <a href = "https://www.freecodecamp.org" target = "_blank">freeCodeCamp.org</a></p>
@@ -133,7 +133,7 @@
                                             <p>These projects have a lot of sentimental value for me now, as I remember how excited I was to learn and implement my new-found web development knowledge for the first time.</p>
                                             
                                         </div>
-                                        <img id = "CertProjects" class="img-fluid" src="assets/kadee_at_computer.JPEG" alt="Photo of KaDee sitting at a computer" />
+                                        <img class="img-fluid" src="assets/kadee_at_computer.JPEG" alt="Photo of KaDee sitting at a computer" />
                                     </div>
                                 </div>
                             </div>
