replacing images with compressed versions and updating file names in img tags

--- a/projects.html
+++ b/projects.html
@@ -455,7 +455,7 @@
                     <!-- Image Section -->
                     <img
                       class="img-fluid"
-                      src="assets/kadee_at_computer.JPEG"
+                      src="assets/kadee_at_computer.png"
                       alt="Photo of KaDee sitting at a computer"
                     />
                   </div>
@@ -537,7 +537,7 @@
                     <img
                       id="Writing"
                       class="img-fluid"
-                      src="assets/kadee_and_winky_at_computer.JPEG"
+                      src="assets/kadee_and_winky_at_computer.png"
                       alt="Photo of KaDee concentrating at the computer while her dog sits in her lap"
                     />
                   </div>
@@ -597,7 +597,7 @@
                     <img
                       id="Video"
                       class="img-fluid"
-                      src="assets/kadee_filming.jpeg"
+                      src="assets/kadee_filming.png"
                       alt="Photo of KaDee filming on a hiking trail"
                     />
                   </div>
@@ -793,7 +793,7 @@
                     <img
                       id="Classical"
                       class="img-fluid"
-                      src="assets/kadee_with_oboe.jpg"
+                      src="assets/kadee_with_oboe.png"
                       alt="Photo of KaDee with her oboe"
                     />
                   </div>
@@ -854,7 +854,7 @@
                     <img
                       id="Educational"
                       class="img-fluid"
-                      src="assets/kadee_and_bach.jpeg"
+                      src="assets/kadee_and_bach.png"
                       alt="Photo of KaDee at the JS Bach museum"
                     />
                   </div>
