--- a/projects.html
+++ b/projects.html
@@ -248,8 +248,9 @@
                       </h4>
                       <p class="mb-5">
                         I built this website for the cellist Dr. Tess
-                        Remy-Schumacher and to publicize her album "Remebrance &
-                        Renewal" for GRAMMY® consideration in 2024.
+                        Remy-Schumacher to publicize her album "Remembrance &
+                        Renewal" for GRAMMY® consideration in 2024. I used HTML,
+                        CSS, Bootstrap, and JavaScript for this project.
                       </p>
 
                       <a
